<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:id="@+id/textView2"
        android:text="@string/login_title"
        android:textSize="@dimen/title_text_size"
        android:textColor="@color/darker_white"
        android:gravity="center"
        android:background="@drawable/text_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12"/>

    <EditText
        android:id="@+id/username"
        android:hint="@string/login_login"
        android:textColor="@color/white"
        android:textColorHint="@color/darker_white"
        android:selectAllOnFocus="true"
        android:inputType="textEmailAddress"
        android:theme="@style/LoginEditText"
        android:paddingVertical="@dimen/edittext_padding_vert"
        android:paddingStart="12dp"
        android:paddingLeft="12dp"
        android:paddingEnd="22dp"
        android:paddingRight="22dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.15" />

    <EditText
        android:id="@+id/password"
        android:hint="@string/login_password"
        android:textColor="@color/white"
        android:selectAllOnFocus="true"
        android:textColorHint="@color/darker_white"
        android:inputType="textPassword"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:theme="@style/LoginEditText"
        android:paddingVertical="@dimen/edittext_padding_vert"
        android:paddingStart="12dp"
        android:paddingLeft="12dp"
        android:paddingEnd="22dp"
        android:paddingRight="22dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <Button
        android:id="@+id/login"
        android:text="@string/login_sign_in"
        android:textSize="@dimen/text_size"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:enabled="false"
        android:background="@drawable/button"
        android:layout_width="@dimen/small_button_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/registration"
        android:text="@string/registration"
        android:textSize="@dimen/text_size"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:background="@drawable/button"
        android:layout_width="@dimen/small_button_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:indeterminateTint="@color/menu_yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password"
        app:layout_constraintVertical_bias="0.45" />

    <Button
        android:id="@+id/forgot_password"
        android:text="Забыли пароль?"
        android:textSize="@dimen/text_size"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:gravity="center"
        android:background="@drawable/button_no_stroke"
        android:autoLink="email"
        android:layout_width="@dimen/small_button_width"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/registration"
        app:layout_constraintVertical_bias="0.35" />

</androidx.constraintlayout.widget.ConstraintLayout>