...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12" />

    <Button
        android:id="@+id/NS"
        android:text="@string/NS_team"
        android:textSize="@dimen/text_size"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:background="@drawable/button"
        android:layout_width="match_parent"
...
